--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 #validate : ???? ???? ????? ???????? ????.
 
 # -> ???? ??? ???? DDL ??
-spring.jpa.properties.hibernate.format_sql=true;
+spring.jpa.properties.hibernate.format_sql=true
 # -> SQL ????? ??
 spring.jpa.show-sql=true
 # -> JPA ??? ???? SQL ??
