--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,17 @@ spring.jpa.show-sql=true
 #Thymeleaf?? ?? ?? ???? ??? ???? ??? ??
 spring.thymeleaf.cache=false
 #??, ?? ?? ?? ???? ?? ??? ?????? Update classes and resources ??
+
+#\uD30C\uC77C \uC5C5\uB85C\uB4DC\uB97C \uC704\uD55C \uC124\uC815
+
+spring.servlet.multipart.enabled=true
+#\uD30C\uC77C \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC5EC\uBD80
+spring.servlet.multipart.location=/Users/jihoon/desktop/upload
+#\uC5C5\uB85C\uB4DC\uB41C \uD30C\uC77C\uC758 \uC784\uC2DC \uC800\uC7A5 \uACBD\uB85C
+spring.servlet.multipart.max-request-size=30MB
+#\uD55C \uBC88\uC5D0 \uCD5C\uB300 \uC5C5\uB85C\uB4DC \uAC00\uB2A5 \uC6A9\uB7C9
+spring.servlet.multipart.max-file-size=10MB
+#\uD30C\uC77C \uD558\uB098\uC758 \uCD5C\uB300 \uD06C\uAE30
+
+com.movie.upload.path=/Users/jihoon/desktop/upload
+#\uC5C5\uB85C\uB4DC \uD30C\uC77C \uC800\uC7A5 \uACBD\uB85C\uC758 \uC124\uC815\uAC12 \uCD94\uAC00\uD574, Upload Controller\uC5D0\uC11C \uC774\uC6A9\uD558\uB3C4\uB85D \uC791\uC131
